# ComfyUI-Iterative-Mixer

./: README.md  __init__.py  face_enhance_node.py  nodes.py  pyproject.toml  requirements.txt
examples/: Advanced_Upscaling_with_Statistics.json  Batch Unsampler.json  Inpainting with Iterative Mixing and FaceID.json  Iterative Mixing Custom Sampler Overpainting Example.json  Iterative Mixing Custom Sampler.json  Iterative Mixing KSampler Technical Analysis.json  Overpainting.json  Simple Upscale Comparison.json  Stable Cascade with Iterative Mixing Refinement.json  Technical Example.json  iterative-mixer-face-enhance-example.json
examples/archive/: Advanced_Upscaling_with_Statistics.json  More Complex Workflow.json  README.md
facelib/utils/: face_restoration_helper.py
samplers/: __init__.py
utils/: __init__.py  noise.py
