[project]
name = "comfyui-iterative-mixer"
description = "Nodes: Iterative Mixing KSampler, Batch Unsampler, Iterative Mixing KSampler Advanced"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ttulttul/ComfyUI-Iterative-Mixer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Iterative-Mixer"
Icon = ""
