[project]
name = "comfyui-iterative-mixer"
description = "Implements a novel sampling approach that progressively blends noised latents to better align with a source image."
version = "0.7.2"
license = { file = "LICENSE" }
dependencies = ["torch>=2.0.0", "torchvision>=0.15.0", "comfy>=0.1.0", "numpy>=1.21.0", "matplotlib>=3.5.0", "Pillow>=9.0.0", "tqdm>=4.62.0", "scipy>=1.7.0"]

[project.urls]
Repository = "https://github.com/ttulttul/ComfyUI-Iterative-Mixer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ttul"
DisplayName = "ComfyUI-Iterative-Mixer"
Icon = "https://raw.githubusercontent.com/ttulttul/ComfyUI-Iterative-Mixer/e4b98e02e3141a0ad52abcf92e8da892ad44af53/images/logo.webp"
